--- a/Repuestos Lirola/css/main.css
+++ b/Repuestos Lirola/css/main.css
@@ -38,4 +38,33 @@ h2 ~ p {
     margin-right: 10px;
 }
 
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.centrar-texto {
+    text-align: center;
+}
+
+@media (min-width: 768px){
+    .altura-h2-columna {
+        min-height: 130px;
+    }
+    h2 ~ p {    
+        min-height: 120px;
+    }
+    
+    
+}
+
+@media (min-width: 1400px) {
+    .altura-h2-columna {
+        min-height: 100px;
+    }
+    h2 ~ p {    
+        min-height: 90px;
+    }
+ }
+
 
