--- a/Repuestos Lirola/css/main.css
+++ b/Repuestos Lirola/css/main.css
@@ -1,5 +1,85 @@
+:root {
+    --fondo-azul: rgb(10, 24, 61);
+    --texto-rojo: red;
+    --texto-blanco: white;
+    --white-cream: #e6e6e6;
+}
+
 .menu {
-    background-color: rgb(10, 24, 61);
+    background-color: var(--fondo-azul);
+}
+
+footer {
+    background-color: var(--fondo-azul);
+    color: white;
+}
+
+.row-cream {
+    background-color: var(--white-cream);
+    flex-direction: row-reverse;
+    padding: 3rem 2rem;
+    align-items: center;
+
+}
+
+.row-normal {
+    padding: 3rem 2rem;
+    align-items: center;
+}
+
+.row-tittle {
+    margin-inline-start: 163px;
+    margin-left: 163px;
+    margin-bottom: 0px;
+    padding-bottom: 18px;
+    font-weight: 800;
+}
+
+p{
+    font-family: Muli;
+    font-size: 1.125rem;
+}
+
+.row-description {
+    margin-inline-start: 163px;
+    margin-left: 163px;
+}
+
+.horario {
+    text-align: center;
+    font-size: 26px;
+}
+.tittle-horario {
+    font-weight: 800;
+}
+
+
+.cerrado {
+    color:  var(--texto-rojo);
+    
+    
+}
+
+.margen-derecho {
+    margin-right: 64px;
+
+}
+
+
+.row-img{
+    background-position: 50%;
+    background-size: cover;
+    height: 302px;
+    width: 100%;
+    padding: 32px;
+}
+
+.row-img-left{
+    background-position: 50%;
+    background-size: cover;
+    height: 302px;
+    width: 100%;
+    padding: 32px;
 }
 
 .iconos {
@@ -7,72 +87,75 @@
     text-decoration: none;
 }
 
+.imgPortada {
+    width: 100%;
+
+
+}
+
 .imgResponsive {
-    width: 90%;
-    
+    width: 100%;
+
 }
 
 .row>* {
     padding: 0;
 }
 
-.separador{
-    width: 100%;
-    height: 20px;
-}
-
-p ~ img {    
-    width: 80%;
-}
-
-h2 ~ p {    
-    min-height: 220px;
-}
-
-.altura-h2-columna {
-    min-height: 170px;
-}
-
-.margen-columna-central {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
 iframe {
     width: 100%;
-    height: 100%;
+    height: 450px;
 }
 
-h3{
-    font-style: oblique;
-}
 
-.centrar-texto {
-    text-align: center;
-}
 
-.red-text {
-    color: red;    
-}
 
-@media (min-width: 768px){
-    .altura-h2-columna {
-        min-height: 130px;
+@media (min-width: 1200px) {
+    
+    p{
+        font-size: 26px;
     }
-    h2 ~ p {    
-        min-height: 120px;
+    .row-img {
+        
+        width: 70%;
+        float: right;
+        
+    }
+    .row-img-left{
+        max-width: 70%;
+        
+    }
+
+    .imgPortada{
+        width: 80%;
+        margin-left: 150px;
+        
     }
     
     
+    
 }
 
-@media (min-width: 1400px) {
-    .altura-h2-columna {
-        min-height: 100px;
+@media (max-width: 768px) {
+    .row {
+        display: block;
     }
-    h2 ~ p {    
-        min-height: 90px;
+
+    .row-tittle {
+        margin-inline-start: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+        padding-bottom: 8px;
     }
- }
 
-
+    .row-description{
+        margin-inline-start: 0px;
+        margin-left: 0px;
+    }
+    .row-img{
+        padding: 0px;
+    }
+    .row-img-left{
+        padding: 0px;
+    }
+}
