--- a/Repuestos Lirola/css/main2.css
+++ b/Repuestos Lirola/css/main2.css
@@ -107,65 +107,11 @@ p{
 
 iframe {
     width: 100%;
-    height: 450px;
-}
-
-@media (min-width: 1200px) {
-    
-    p{
-        font-size: 16px;
-    }
-    .row-img {
-        
-        width: 70%;
-        float: right;
-        
-    }
-    .row-img-left{
-        max-width: 70%;
-        
-    }
-
-    .imgPortada{
-        width: 60%;
-        margin-left: 300px;
-        
-    }
-    
-    
-    
+    height: 400px;
 }
 
 
-
-
-@media (min-width: 1400px) {
-    
-    p{
-        font-size: 26px;
-    }
-    .row-img {
-        
-        width: 70%;
-        float: right;
-        
-    }
-    .row-img-left{
-        max-width: 70%;
-        
-    }
-
-    .imgPortada{
-        width: 60%;
-        margin-left: 300px;
-        
-    }
-    
-    
-    
-}
-
-@media (max-width: 992px) {
+@media (min-width: 576px) { 
     .row {
         display: block;
     }
@@ -187,5 +133,57 @@ iframe {
     .row-img-left{
         padding: 0px;
     }
-}
+ }
+
+
+@media (min-width: 768px) { 
+    .row{
+        display: flex;
+    }
+    .row-img{
+        padding: 20px;      
+                
+    }
+    .row-img-left{
+        padding: 20px;
+    }
+    
+    
+    
+ }
+
+
+@media (min-width: 992px) {
+    
+  }
+
+
+@media (min-width: 1200px) {
+    .imgPortada{
+        width: 90%;
+    }
+
+    .row-tittle{
+        margin-left: 50px;
+    }
+    .row-description{
+        margin-left: 50px;
+    }
+  }
+
+
+@media (min-width: 1400px) { 
+    .imgPortada{
+        width: 60%;
+        margin-left: 300px;
+    }
+    .row-img{
+        width: 70%;      
+                
+    }
+    .row-img-left{
+        width: 70%;
+    }
+    
+ }
 
