--- a/Repuestos Lirola/css/main.css
+++ b/Repuestos Lirola/css/main.css
@@ -5,8 +5,11 @@
     --white-cream: #e6e6e6;
 }
 
+
+
 .menu {
     background-color: var(--fondo-azul);
+
 }
 
 footer {
@@ -22,6 +25,7 @@ footer {
     padding: 3rem 2rem;
     align-items: center;
 
+
 }
 
 .row-normal {
@@ -30,6 +34,7 @@ footer {
 }
 
 .row-tittle {
+    -webkit-margin-start: 163px;
     margin-inline-start: 163px;
     margin-left: 163px;
     margin-bottom: 0px;
@@ -37,12 +42,19 @@ footer {
     font-weight: 800;
 }
 
-p{
+p {
     font-family: Muli;
     font-size: 1.125rem;
 }
 
+b {
+    font-family: Muli;
+    
+    
+}
+
 .row-description {
+    -webkit-margin-start: 163px;
     margin-inline-start: 163px;
     margin-left: 163px;
 }
@@ -51,15 +63,16 @@ p{
     text-align: center;
     font-size: 26px;
 }
+
 .tittle-horario {
     font-weight: 800;
 }
 
 
 .cerrado {
-    color:  var(--texto-rojo);
-    
-    
+    color: var(--texto-rojo);
+
+
 }
 
 .margen-derecho {
@@ -68,20 +81,18 @@ p{
 }
 
 
-.row-img{
+.row-img {
     background-position: 50%;
     background-size: cover;
-    height: 302px;
     width: 100%;
-    padding: 32px;
+    padding: 50px;
 }
 
-.row-img-left{
+.row-img-left {
     background-position: 50%;
     background-size: cover;
-    height: 302px;
     width: 100%;
-    padding: 32px;
+    padding: 50px;
 }
 
 .iconos {
@@ -96,8 +107,17 @@ p{
 
 }
 
-.imgResponsive {
+.img-responsive {
     width: 100%;
+    padding: 50px;
+    border: 2px solid var(--fondo-azul);
+
+
+}
+
+.img-responsive~b {
+    font-size: 16px;
+    padding: 10px;
 
 }
 
@@ -107,85 +127,222 @@ p{
 
 iframe {
     width: 100%;
-    height: 450px;
-}
-
-@media (min-width: 1200px) {
-    
-    p{
-        font-size: 16px;
-    }
-    .row-img {
-        
-        width: 70%;
-        float: right;
-        
-    }
-    .row-img-left{
-        max-width: 70%;
-        
-    }
-
-    .imgPortada{
-        width: 60%;
-        margin-left: 300px;
-        
-    }
-    
-    
-    
+    height: 400px;
 }
 
 
 
+/*Estilos para productos. html */
 
-@media (min-width: 1400px) {
-    
-    p{
-        font-size: 26px;
-    }
-    .row-img {
-        
-        width: 70%;
-        float: right;
-        
-    }
-    .row-img-left{
-        max-width: 70%;
-        
-    }
+.titulo-productos {
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 700;
+    text-align: center;
+}
 
-    .imgPortada{
-        width: 60%;
-        margin-left: 300px;
-        
-    }
-    
-    
+
+/*Estilos para quiénes somos. html */
+
+.titulo-quiensomos {    
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 800;
+    text-align: center;
+    margin: 0;
+}
+
+#bg-quiensomos {
+    background-color: var(--white-cream);
     
 }
 
-@media (max-width: 992px) {
+#img-quiensomos {
+    width: 100%;
+    padding: 50px;
+    
+}
+
+#acercadenosotros{
+    padding-top: 50px;
+    padding-bottom: 10px;
+    font-weight: 900;
+}
+
+.img-equipo {
+    width: 100%;
+}
+
+
+
+
+@media (max-width: 576px) {
     .row {
         display: block;
     }
 
+
     .row-tittle {
+        -webkit-margin-start: 0px;
         margin-inline-start: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
         padding-bottom: 8px;
+        padding-left: 50px;
+        padding-right: 50px;
     }
 
-    .row-description{
+    .row-description {
+        -webkit-margin-start: 0px;
         margin-inline-start: 0px;
         margin-left: 0px;
+        padding-left: 50px;
+        padding-right: 50px;
     }
-    .row-img{
+
+    #img-quiensomos {
+        width: 100%;
         padding: 0px;
+        
     }
-    .row-img-left{
+
+    #acercadenosotros{
+        padding-top: 0px;
+        padding-bottom: 10px;
+        font-weight: 900;
+    }
+
+}
+
+@media (min-width: 576px) {
+    .row {
+        display: block;
+    }
+
+
+    .row-tittle {
+        -webkit-margin-start: 0px;
+        margin-inline-start: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+        padding-bottom: 8px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .row-description {
+        -webkit-margin-start: 0px;
+        margin-inline-start: 0px;
+        margin-left: 0px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    #img-quiensomos {
+        width: 100%;
         padding: 0px;
+        
+    }
+    #acercadenosotros{
+        padding-top: 0px;
+        padding-bottom: 10px;
+        font-weight: 900;
+    }
+
+}
+
+
+@media (min-width: 768px) {
+    .row {
+        display: flex;
+    }
+
+    .row-img {
+        padding: 10px;
+
+    }
+
+    .row-img-left {
+        padding: 10px;
+    }
+
+
+
+}
+
+
+@media (min-width: 992px) {
+    .row-tittle {
+        padding-left: 50px;
+    }
+
+    .row-description {
+        padding-left: 50px;
+    }
+    #img-quiensomos {
+        width: 100%;
+        padding: 0px;
+        
+    }
+    
+}
+
+
+@media (min-width: 1200px) {
+    .imgPortada {
+        width: 90%;
+    }
+
+    .row-tittle {
+        padding-left: 50px;
+    }
+
+    .row-description {
+        padding-left: 50px;
+    }
+
+    .img-responsive {
+        padding: 50px;
+    }
+    #acercadenosotros{
+        padding-top: 0px;
+        padding-bottom: 10px;
+        font-weight: 900;
     }
 }
 
+
+@media (min-width: 1400px) {
+    .imgPortada {
+        width: 60%;
+        margin-left: 350px;
+    }
+
+    .row-img {
+        width: 80%;
+    }
+
+    .row-img-left {
+        width: 80%;
+    }
+
+    .row-tittle {
+
+        padding-bottom: 8px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .row-description {
+
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+
+
+
+
+
+}
