--- a/Repuestos Lirola/css/main.css
+++ b/Repuestos Lirola/css/main.css
@@ -4,59 +4,35 @@
     --texto-blanco: white;
     --white-cream: #e6e6e6;
 }
-
-
-
 .menu {
     background-color: var(--fondo-azul);
 
 }
-
 footer {
     background-color: var(--fondo-azul);
     color: white;
 }
-
-
-
 .row-cream {
     background-color: var(--white-cream);
     flex-direction: row-reverse;
-    padding: 3rem 2rem;
-    align-items: center;
-
-
+    padding: 20px;   
 }
-
 .row-normal {
-    padding: 3rem 2rem;
-    align-items: center;
+    padding: 20px;
+    
 }
-
-.row-tittle {
-    -webkit-margin-start: 163px;
-    margin-inline-start: 163px;
-    margin-left: 163px;
-    margin-bottom: 0px;
-    padding-bottom: 18px;
+.row-tittle {    
+    padding: 10px;
     font-weight: 800;
 }
-
-p {
+p, b {
     font-family: Muli;
     font-size: 1.125rem;
 }
 
-b {
-    font-family: Muli;
-    
-    
-}
 
 .row-description {
-    -webkit-margin-start: 163px;
-    margin-inline-start: 163px;
-    margin-left: 163px;
+    padding: 10px;
 }
 
 .horario {
@@ -75,24 +51,11 @@ b {
 
 }
 
-.margen-derecho {
-    margin-right: 64px;
-
-}
-
-
 .row-img {
-    background-position: 50%;
-    background-size: cover;
+    
     width: 100%;
-    padding: 50px;
-}
-
-.row-img-left {
-    background-position: 50%;
-    background-size: cover;
-    width: 100%;
-    padding: 50px;
+    padding: 10px;
+    height: 100%;
 }
 
 .iconos {
@@ -102,24 +65,9 @@ b {
 }
 
 .imgPortada {
-    width: 100%;
-
-
+    width: 100%;   
 }
 
-.img-responsive {
-    width: 100%;
-    padding: 50px;
-    border: 2px solid var(--fondo-azul);
-
-
-}
-
-.img-responsive~b {
-    font-size: 16px;
-    padding: 10px;
-
-}
 
 .row>* {
     padding: 0;
@@ -130,22 +78,41 @@ iframe {
     height: 400px;
 }
 
+.row-portada {
+    text-align: center;
+}
+
+
 
 
 /*Estilos para productos. html */
 
 .titulo-productos {
-    padding-left: 50px;
+    padding-left: auto;
     padding-top: 20px;
     padding-bottom: 20px;
     font-weight: 700;
     text-align: center;
 }
 
+.carousel-item h5 {
+    position: absolute;
+    margin: 0;   
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: 800;
+}
+.img-carousel {
+    width: 30%;
+    margin: auto;
+    
+}
+
 
 /*Estilos para quiénes somos. html */
 
-.titulo-quiensomos {    
+.titulo-quiensomos {
     padding-top: 20px;
     padding-bottom: 20px;
     font-weight: 800;
@@ -155,17 +122,18 @@ iframe {
 
 #bg-quiensomos {
     background-color: var(--white-cream);
-    
+
 }
 
 #img-quiensomos {
     width: 100%;
+    height: 100%;
     padding: 50px;
-    
+
 }
 
-#acercadenosotros{
-    padding-top: 50px;
+#acercadenosotros {
+    
     padding-bottom: 10px;
     font-weight: 900;
 }
@@ -180,37 +148,18 @@ iframe {
 @media (max-width: 576px) {
     .row {
         display: block;
-    }
-
-
-    .row-tittle {
-        -webkit-margin-start: 0px;
-        margin-inline-start: 0px;
-        margin-left: 0px;
-        margin-bottom: 0px;
-        padding-bottom: 8px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
-    .row-description {
-        -webkit-margin-start: 0px;
-        margin-inline-start: 0px;
-        margin-left: 0px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
+    }   
+  
     #img-quiensomos {
         width: 100%;
         padding: 0px;
-        
-    }
 
-    #acercadenosotros{
-        padding-top: 0px;
-        padding-bottom: 10px;
-        font-weight: 900;
+    }
+    
+    .img-carousel {
+        width: 100%;
+        margin: auto;
+        
     }
 
 }
@@ -218,36 +167,19 @@ iframe {
 @media (min-width: 576px) {
     .row {
         display: block;
-    }
-
-
-    .row-tittle {
-        -webkit-margin-start: 0px;
-        margin-inline-start: 0px;
-        margin-left: 0px;
-        margin-bottom: 0px;
-        padding-bottom: 8px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
-    .row-description {
-        -webkit-margin-start: 0px;
-        margin-inline-start: 0px;
-        margin-left: 0px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
+    }   
+   
     #img-quiensomos {
         width: 100%;
         padding: 0px;
-        
+
     }
-    #acercadenosotros{
-        padding-top: 0px;
-        padding-bottom: 10px;
-        font-weight: 900;
+
+    
+    .img-carousel {
+        width: 100%;
+        margin: auto;
+        
     }
 
 }
@@ -256,16 +188,7 @@ iframe {
 @media (min-width: 768px) {
     .row {
         display: flex;
-    }
-
-    .row-img {
-        padding: 10px;
-
-    }
-
-    .row-img-left {
-        padding: 10px;
-    }
+    }  
 
 
 
@@ -274,17 +197,13 @@ iframe {
 
 @media (min-width: 992px) {
     .row-tittle {
-        padding-left: 50px;
+        padding: 20px;
     }
 
     .row-description {
-        padding-left: 50px;
+        padding: 20px;
     }
-    #img-quiensomos {
-        width: 100%;
-        padding: 0px;
-        
-    }
+
     
 }
 
@@ -292,54 +211,26 @@ iframe {
 @media (min-width: 1200px) {
     .imgPortada {
         width: 90%;
-    }
-
-    .row-tittle {
-        padding-left: 50px;
-    }
-
-    .row-description {
-        padding-left: 50px;
-    }
-
-    .img-responsive {
-        padding: 50px;
-    }
-    #acercadenosotros{
-        padding-top: 0px;
-        padding-bottom: 10px;
-        font-weight: 900;
-    }
+    }  
+    
 }
 
 
 @media (min-width: 1400px) {
     .imgPortada {
-        width: 60%;
-        margin-left: 350px;
+        width: 50%;
+        
+    }    
+    .row{
+        justify-content: center;
+        
+    }  
+
+    .row-img{
+        width: 70%;
     }
 
-    .row-img {
-        width: 80%;
-    }
-
-    .row-img-left {
-        width: 80%;
-    }
-
-    .row-tittle {
-
-        padding-bottom: 8px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
-    .row-description {
-
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-
+    
 
 
 
