--- a/Repuestos Lirola/css/main.css
+++ b/Repuestos Lirola/css/main.css
@@ -238,4 +238,15 @@ iframe {
 }
 
 
+.prueba {
+    container-type: inline-size;
+    container-name: sidebar;
+    display: inline-flex;
+  }
 
+
+  @container sidebar (max-width: 1400px) {
+    .card {
+        display: flex;
+    }
+  }
